--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -18,10 +18,10 @@ italic_font      jetbrains mono italic
 bold_italic_font jetbrains mono bold italic
 
 # Background ------------------------ 
-background_image ./wifu/mayuri.png
+background_image ./wifu/default.png
 background_image_layout scaled
 background_image_linear yes
-background_tint 0.85
+background_tint 0.9
 
 # Window -------------------
 hide_window_decorations yes
