feat: add a custom config file -> `kitty`
Move background and font configurations to `custom.conf`.
This will allow change it locally

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,27 +1,15 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 # more options in: https://sw.kovidgoyal.net/kitty/conf/
 
+# Include custom configuration (background - font)
+include ./custom.conf
+
 # Mouse -----------------
 mouse_hide_wait 1.0
 
 # Cursor ----------------
 cursor_blink_interval 0.8
 cursor_shape block
-
-# Font ------------------
-font_size 14.0
-modify_font cell_height 110%
-
-font_family      jetbrains mono
-bold_font        jetbrains mono bold
-italic_font      jetbrains mono italic
-bold_italic_font jetbrains mono bold italic
-
-# Background ------------------------ 
-background_image ./wifu/default.png
-background_image_layout scaled
-background_image_linear yes
-background_tint 0.9
 
 # Window -------------------
 hide_window_decorations yes
