--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -46,7 +46,7 @@ inactive_tab_background #873248
 inactive_tab_font_style normal
 
 # Advanced ---------------------
-editor vim
+editor nvim
 
 # Tab Keymaps ---------------------------------------
 map kitty_mod+1 goto_tab 1
