change default layout to `Fat` -> kitty

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -14,7 +14,7 @@ cursor_shape block
 # Window -------------------
 hide_window_decorations yes
 draw_minimal_borders yes
-enabled_layouts Grid, Fat, Splits, Stack
+enabled_layouts Fat, Grid, Splits, Stack
 
 placement_strategy top-left
 window_margin_width 1
