--- a/config/kitty/custom.conf
+++ b/config/kitty/custom.conf
@@ -1,6 +1,6 @@
 # Font ------------------
-font_size 14.0
-modify_font cell_height 110%
+font_size 15.0
+modify_font cell_height 120%
 
 font_family      jetbrains mono
 bold_font        jetbrains mono bold
@@ -8,7 +8,7 @@ italic_font      jetbrains mono italic
 bold_italic_font jetbrains mono bold italic
 
 # Background ------------------------ 
-background_image ./wifu/default.png
+background_image ./wifu/black_armor.png
 background_image_layout scaled
 background_image_linear yes
-background_tint 0.9
+background_tint 0.85
