--- a/config/kitty/custom.conf
+++ b/config/kitty/custom.conf
@@ -8,7 +8,7 @@ italic_font      jetbrains mono italic
 bold_italic_font jetbrains mono bold italic
 
 # Background ------------------------ 
-background_image ./wifu/black_armor.png
+background_image ./bg/black_armor.png
 background_image_layout scaled
 background_image_linear yes
 background_tint 0.85
