--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -63,9 +63,9 @@ map kitty_mod+9 goto_tab 9
 map ctrl+shift+enter new_window_with_cwd
 map kitty_mod+z toggle_layout stack
 
-map ctrl+l resize_window narrower
-map ctrl+h resize_window wider
-map ctrl+k resize_window taller
-map ctrl+j resize_window shorter 3
-map ctrl+r resize_window reset
+map kitty_mod+alt+l resize_window narrower
+map kitty_mod+alt+h resize_window wider
+map kitty_mod+alt+k resize_window taller
+map kitty_mod+alt+j resize_window shorter 3
+map kitty_mod+alt+r resize_window reset
 
