fix(kitty): restore functionality of kitty 'cursor_shape'

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -10,6 +10,7 @@ mouse_hide_wait 1.0
 # Cursor ----------------
 cursor_blink_interval 0.8
 cursor_shape block
+shell_integration no-cursor # fix broken cursor shape
 
 # Window -------------------
 hide_window_decorations yes
