--- a/config/kitty/custom.conf
+++ b/config/kitty/custom.conf
@@ -1,6 +1,6 @@
 # Font ------------------
 font_size 15.0
-modify_font cell_height 120%
+modify_font cell_height 130%
 
 font_family      jetbrains mono
 bold_font        jetbrains mono bold
@@ -8,7 +8,7 @@ italic_font      jetbrains mono italic
 bold_italic_font jetbrains mono bold italic
 
 # Background ------------------------ 
-background_image ./bg/black_armor.png
+background_image ./bg/ciberpunk_lucy.png
 background_image_layout scaled
 background_image_linear yes
-background_tint 0.85
+background_tint 0.8
