--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -25,13 +25,13 @@ active_border_color #5e2a38
 inactive_border_color #38131c
 
 remember_window_size  yes
-initial_window_width  640
-initial_window_height 400
+initial_window_width  82c
+initial_window_height 24c
 
 # Tab Bar -----------------
 tab_title_template "{index}"
 tab_bar_edge bottom
-tab_bar_min_tabs 1
+tab_bar_min_tabs 2
 tab_bar_margin_width 0.0
 tab_bar_margin_height 0.0 0.0
 tab_bar_style powerline
@@ -39,10 +39,10 @@ tab_bar_align left
 tab_switch_strategy previous
 tab_powerline_style angled
 
-active_tab_foreground   #EEE6CE
+active_tab_foreground   #CCCCCC
 active_tab_background   #B8405E
 active_tab_font_style   normal
-inactive_tab_foreground #DCD5C2
+inactive_tab_foreground #AAAAAA
 inactive_tab_background #873248
 inactive_tab_font_style normal
 
