add shortcut to open tab in cwd -> kitty

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -61,7 +61,8 @@ map kitty_mod+8 goto_tab 8
 map kitty_mod+9 goto_tab 9
 
 # Windows Keymaps -------------------------------
-map ctrl+shift+enter new_window_with_cwd
+map kitty_mod+enter new_window_with_cwd
+map kitty_mod+t new_tab_with_cwd
 map kitty_mod+z toggle_layout stack
 
 map kitty_mod+alt+l resize_window narrower
