added gnome shortcut

--- a/gnome-settings.ini
+++ b/gnome-settings.ini
@@ -7,7 +7,7 @@ use-system-font=false
 migrated-config=true
 
 [org/gnome/control-center]
-last-panel='datetime'
+last-panel='keyboard'
 window-state=(980, 640, false)
 
 [org/gnome/desktop/app-folders]
@@ -47,6 +47,8 @@ recent-files-max-age=-1
 idle-delay=uint32 300
 
 [org/gnome/desktop/wm/keybindings]
+cycle-group=['<Alt>s']
+cycle-group-backward=['<Shift><Alt>s']
 switch-to-workspace-1=['<Alt>1']
 switch-to-workspace-2=['<Alt>2']
 switch-to-workspace-3=['<Alt>3']
@@ -61,7 +63,7 @@ migrated-gtk-settings=true
 search-filter-time-type='last_modified'
 
 [org/gnome/nautilus/window-state]
-initial-size=(890, 550)
+initial-size=(1142, 550)
 
 [org/gnome/portal/filechooser/org.gnome.Settings]
 last-folder-path='/home/tammuz/.dotfiles/config/kitty/bg'
