--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,7 @@
         br = branch
         ci = commit
         st = status
+	staash = stash --all
 
 [apply]
         # Detect whitespace errors when applying a patch.
@@ -18,6 +19,7 @@
 
 [init]
 	defaultBranch = main
-[user]
-	name = mr-ema
-	email = ema.a.v.c2017@gmail.com
+[column]
+	ui = auto
+[branch]
+	sort = -committerdate
